fixed overlapping div

--- a/src/App.css
+++ b/src/App.css
@@ -203,7 +203,8 @@ textarea:focus,
   text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.1);
 }
 .about {
-  padding: 20rem 0;
+  padding: 22rem 0;
+  margin: 0;
 }
 
 @media (max-width: 576px) {
